[gd_scene load_steps=16 format=3 uid="uid://sbk2gb1ayn30"]

[ext_resource type="Script" uid="uid://b8qsiqb5vlint" path="res://Scripts/level_1.gd" id="1_7p6j4"]
[ext_resource type="PackedScene" uid="uid://bdl0qba1sjqqp" path="res://Scenes/tilemap.tscn" id="1_xfk5q"]
[ext_resource type="PackedScene" uid="uid://dg7cshvbsa2ds" path="res://Scenes/player.tscn" id="2_7p6j4"]
[ext_resource type="PackedScene" uid="uid://ovil38ch4qq7" path="res://Scenes/battery.tscn" id="3_6444e"]
[ext_resource type="Texture2D" uid="uid://174f7mx57a3d" path="res://Sprites/four_light_a1.png" id="3_chwpn"]
[ext_resource type="Texture2D" uid="uid://cskpxso16j26i" path="res://Sprites/four_light_a2.png" id="4_af3po"]
[ext_resource type="Texture2D" uid="uid://c1t1adplqgkgq" path="res://Sprites/battery_spot.png" id="5_6444e"]
[ext_resource type="Texture2D" uid="uid://cg8ibul5lfrpy" path="res://Sprites/lock_v.png" id="6_evi0p"]
[ext_resource type="Texture2D" uid="uid://c65yo088uu470" path="res://Sprites/fan_1.png" id="7_lsmp6"]
[ext_resource type="Texture2D" uid="uid://c4s45bgv825y2" path="res://Sprites/fan_2.png" id="8_xrdnt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uy8f0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chwpn")
}, {
"duration": 1.0,
"texture": ExtResource("4_af3po")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evi0p"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6444e"]
size = Vector2(30.5, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsmp6"]
size = Vector2(24, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_wrinw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_lsmp6")
}, {
"duration": 1.0,
"texture": ExtResource("8_xrdnt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Level1" type="Node2D"]
script = ExtResource("1_7p6j4")

[node name="TileMap" parent="." instance=ExtResource("1_xfk5q")]
layer_0/tile_data = PackedInt32Array(0, 131072, 4, 65536, 131072, 4, 131072, 131072, 4, 196608, 131072, 4, 262144, 131072, 4, 327680, 131072, 4, 393216, 131072, 4, 458752, 131072, 4, 524288, 131072, 4, 589824, 131072, 1, 655360, 327680, 4, 720896, 327680, 4, 786432, 327680, 4, 851968, 196608, 1, 917504, 131072, 4, 1, 131072, 4, 65537, 131072, 4, 131073, 131072, 4, 196609, 131072, 4, 262145, 131072, 4, 327681, 131072, 4, 393217, 131072, 4, 458753, 131072, 4, 524289, 131072, 4, 589825, 131072, 1, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 196608, 1, 917505, 131072, 4, 2, 131072, 4, 65538, 131072, 4, 917506, 131072, 4, 3, 131072, 4, 65539, 393216, 1, 917507, 131072, 4, 4, 131072, 4, 65540, 131072, 1, 917508, 131072, 4, 5, 131072, 4, 65541, 131072, 1, 917509, 131072, 4, 6, 131072, 4, 65542, 131072, 1, 917510, 131072, 4, 7, 131072, 4, 65543, 131072, 1, 917511, 131072, 4, 8, 131072, 4, 65544, 131072, 1, 917512, 131072, 4, 9, 131072, 4, 65545, 131072, 1, 917513, 131072, 4, 10, 131072, 4, 65546, 131072, 1, 917514, 131072, 4, 11, 131072, 4, 65547, 131072, 1, 917515, 131072, 4, 12, 131072, 4, 65548, 131072, 1, 917516, 131072, 4, 13, 131072, 4, 65549, 131072, 1, 917517, 131072, 4, 14, 131072, 4, 65550, 131072, 1, 917518, 131072, 4, 15, 131072, 4, 65551, 327680, 1, 917519, 131072, 4, 16, 131072, 4, 65552, 131072, 4, 917520, 131072, 4, 17, 458752, 8, 65553, 131072, 4, 917521, 131072, 4, 18, 524288, 8, 65554, 131072, 4, 917522, 131072, 4, 19, 131072, 4, 65555, 131072, 4, 131091, 131072, 4, 196627, 131072, 1, 262163, 262144, 4, 327699, 262144, 4, 393235, 262144, 4, 458771, 196608, 1, 524307, 327680, 1, 589843, 65536, 1, 655379, 65536, 1, 720915, 65536, 1, 786451, 65536, 1, 851987, 262144, 1, 917523, 131072, 4, 131074, 131072, 4, 196610, 131072, 4, 262146, 131072, 4, 327682, 131072, 4, 393218, 131072, 4, 458754, 131072, 4, 524290, 131072, 4, 589826, 131072, 1, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 196608, 1, 131075, 0, 1, 196611, 0, 1, 262147, 0, 1, 327683, 0, 1, 393219, 0, 1, 458755, 0, 1, 524291, 0, 1, 589827, 196608, 2, 655363, 0, 6, 720899, 131072, 5, 786435, 0, 0, 851971, 196608, 1, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 196608, 1, 131077, 0, 0, 196613, 196608, 6, 262149, 0, 7, 327685, 0, 7, 393221, 262144, 6, 458757, 0, 0, 524293, 196608, 6, 589829, 0, 7, 655365, 0, 7, 720901, 262144, 6, 786437, 0, 0, 851973, 196608, 1, 131078, 0, 0, 196614, 0, 7, 262150, 131072, 0, 327686, 196608, 0, 393222, 0, 7, 458758, 0, 0, 524294, 0, 7, 589830, 131072, 0, 655366, 196608, 0, 720902, 0, 7, 786438, 0, 0, 851974, 196608, 1, 131079, 0, 0, 196615, 0, 7, 262151, 65536, 0, 327687, 262144, 0, 393223, 0, 7, 458759, 0, 0, 524295, 0, 7, 589831, 65536, 0, 655367, 262144, 0, 720903, 0, 7, 786439, 0, 0, 851975, 196608, 1, 131080, 0, 0, 196616, 393216, 6, 262152, 0, 7, 327688, 0, 7, 393224, 327680, 6, 458760, 0, 0, 524296, 393216, 6, 589832, 0, 7, 655368, 0, 7, 720904, 327680, 6, 786440, 0, 0, 851976, 196608, 1, 131081, 0, 0, 196617, 0, 0, 262153, 0, 7, 327689, 0, 7, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 7, 655369, 0, 7, 720905, 0, 0, 786441, 0, 0, 851977, 196608, 1, 131082, 0, 0, 262154, 0, 7, 327690, 0, 7, 393226, 262144, 6, 458762, 0, 0, 524298, 196608, 6, 589834, 0, 7, 655370, 0, 7, 720906, 262144, 6, 786442, 0, 0, 851978, 196608, 1, 131083, 0, 0, 196619, 0, 7, 262155, 131072, 0, 327691, 196608, 0, 393227, 0, 7, 458763, 0, 0, 524299, 0, 7, 589835, 131072, 0, 655371, 196608, 0, 720907, 0, 7, 786443, 0, 0, 851979, 196608, 1, 131084, 0, 0, 196620, 0, 7, 262156, 65536, 0, 327692, 262144, 0, 393228, 0, 7, 458764, 0, 0, 524300, 0, 7, 589836, 65536, 0, 655372, 262144, 0, 720908, 0, 7, 786444, 0, 0, 851980, 196608, 1, 131085, 0, 0, 196621, 393216, 6, 262157, 0, 7, 327693, 0, 7, 393229, 327680, 6, 458765, 0, 0, 524301, 393216, 6, 589837, 0, 7, 655373, 0, 7, 720909, 327680, 6, 786445, 0, 0, 851981, 196608, 1, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 0, 0, 851982, 196608, 1, 131087, 65536, 1, 196623, 131072, 2, 262159, 0, 6, 327695, 524288, 0, 393231, 589824, 5, 458767, 65536, 2, 524303, 65536, 1, 589839, 65536, 1, 655375, 131072, 3, 720911, 131072, 3, 786447, 65536, 1, 851983, 262144, 1, 131088, 131072, 4, 196624, 131072, 1, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 196608, 1, 524304, 393216, 1, 589840, 0, 1, 655376, 65536, 3, 720912, 65536, 3, 786448, 0, 1, 851984, 458752, 1, 131089, 131072, 4, 196625, 131072, 1, 262161, 589824, 5, 327697, 327680, 0, 393233, 0, 6, 458769, 327680, 3, 524305, 262144, 3, 589841, 0, 7, 655377, 0, 7, 720913, 0, 7, 786449, 0, 7, 851985, 196608, 1, 131090, 131072, 4, 196626, 131072, 1, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 327680, 3, 524306, 262144, 3, 589842, 0, 7, 655378, 0, 7, 720914, 0, 7, 786450, 0, 7, 851986, 196608, 1, 196618, 196608, 6)
layer_1/name = "Layer1"

[node name="Lights" type="AnimatedSprite2D" parent="."]
position = Vector2(152, 120)
sprite_frames = SubResource("SpriteFrames_uy8f0")

[node name="BatterySpot" type="Sprite2D" parent="."]
position = Vector2(192, 80)
texture = ExtResource("5_6444e")

[node name="BatteryArea" type="Area2D" parent="BatterySpot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BatterySpot/BatteryArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_evi0p")

[node name="BatterySpot2" type="Sprite2D" parent="."]
position = Vector2(192, 160)
texture = ExtResource("5_6444e")

[node name="BatteryArea" type="Area2D" parent="BatterySpot2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BatterySpot2/BatteryArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_evi0p")

[node name="Battery" parent="." instance=ExtResource("3_6444e")]
position = Vector2(112, 80)

[node name="Battery2" parent="." instance=ExtResource("3_6444e")]
position = Vector2(112, 160)

[node name="Player" parent="." instance=ExtResource("2_7p6j4")]
position = Vector2(16, 192)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(328, 88)
shape = SubResource("RectangleShape2D_6444e")

[node name="Lock" type="RigidBody2D" parent="."]
position = Vector2(0, -80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lock"]
position = Vector2(316, 168)
shape = SubResource("RectangleShape2D_lsmp6")

[node name="Lock2" type="Sprite2D" parent="Lock"]
position = Vector2(312, 152)
texture = ExtResource("6_evi0p")

[node name="LockV2" type="Sprite2D" parent="Lock"]
position = Vector2(312, 184)
texture = ExtResource("6_evi0p")

[node name="LockV3" type="Sprite2D" parent="Lock"]
position = Vector2(312, 168)
texture = ExtResource("6_evi0p")

[node name="Fan" type="AnimatedSprite2D" parent="."]
position = Vector2(288, 160)
sprite_frames = SubResource("SpriteFrames_wrinw")

[node name="Fan2" type="AnimatedSprite2D" parent="."]
position = Vector2(288, 192)
sprite_frames = SubResource("SpriteFrames_wrinw")

[connection signal="body_entered" from="BatterySpot/BatteryArea" to="." method="_on_battery_area_body_entered"]
[connection signal="body_entered" from="BatterySpot2/BatteryArea" to="." method="_on_battery_area_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
